welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
move(int nbPas, boolean versLAvant) {
^Program:2: error: expected class or object definition
move(int nbPas, boolean versLAvant) {
^